<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/marginStart"
        android:text="@string/name"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/surname"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/input_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:hint="@string/surname"
        android:inputType="text"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/age"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/input_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:hint="@string/age"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/action_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/action_save"
        android:textSize="@dimen/textSize" />

    <Button
        android:id="@+id/action_getUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/action_getUser"
        android:textSize="@dimen/textSize" />

    <Button
        android:id="@+id/action_getUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/action_getUsers"
        android:textSize="@dimen/textSize" />
    <Button
        android:id="@+id/action_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/action_clear"
        android:textSize="@dimen/textSize" />
</LinearLayout>